--- a/web/index.html
+++ b/web/index.html
@@ -229,7 +229,6 @@
                                 </td>
                                 <td itemprop="telephone">
                                     <a href="mailto:contato@novorumoatibaia.com.br">contato@novorumoatibaia.com.br</a>
-                                    <img src="/images/mail.png" />
                                 </td>
                             </tr>
                         </tbody>
@@ -253,7 +252,9 @@
         <div class="grid-container grid-x">
             <div class="small-12 medium-4">
                 <p>
-                    <img src="http://via.placeholder.com/200x150">
+                    <a href="/">
+                        <img src="http://via.placeholder.com/200x150" alt="logotipo novo rumo">
+                    </a>
                 </p>
             </div>
             <div class="small-6 medium-4">
@@ -262,13 +263,13 @@
                         Explore
                     </li>
                     <li>
-                        <a href="">Sobre nós</a>
+                        <a href="#sobre-nos">Sobre nós</a>
                     </li>
                     <li>
-                        <a href="">Eventos</a>
+                        <a href="#eventos">Eventos</a>
                     </li>
                     <li>
-                        <a href="">Dia-a-dia</a>
+                        <a href="#dia-a-dia">Dia-a-dia</a>
                     </li>
                 </ul>
             </div>
@@ -278,7 +279,7 @@
                         Envolva-se
                     </li>
                     <li>
-                        <a href="">
+                        <a href="checkout">
                             Doe agora
                         </a>
                     </li>
@@ -289,45 +290,52 @@
             <div class="small-12 medium-8 hide-for-small-only">
                 <p>© Associação Novo Rumo</p>
             </div>
-            <div class="small-12 medium-4 footer__social">
-                <a href="#" class="footer__social__link" title="Email">
-                    <span class="icon icon-email">
-                        <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 11">
-                            <path fill-rule="nonzero" d="M.476 1.675v-.342C.476.873.85.5 1.31.5h11.666c.46 0 .834.373.834.833v.342L7.143 5.842.476 1.675zm6.888 5.012a.417.417 0 0 1-.442 0L.476 2.658v7.009c0 .46.373.833.834.833h11.666c.46 0 .834-.373.834-.833V2.658L7.364 6.687z"></path>
-                        </svg>
-                    </span>
-                </a>
-
-                <a href="#" class="footer__social__link" title="Facebook" target="_blank">
-                    <span class="icon icon-facebook">
-                        <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;"
-                            xml:space="preserve">
-                            <path class="st0" d="M18.9,0H1.1C0.5,0,0,0.5,0,1.1v17.8C0,19.5,0.5,20,1.1,20h9.6v-7.7H8.1v-3h2.6V7c0-2.6,1.6-4,3.9-4
-        c1.1,0,2.1,0.1,2.3,0.1v2.7h-1.6c-1.3,0-1.5,0.6-1.5,1.5v1.9h3l-0.4,3h-2.6V20h5.1c0.6,0,1.1-0.5,1.1-1.1V1.1C20,0.5,19.5,0,18.9,0"></path>
-                        </svg>
-                    </span>
-                </a>
-                <a href="https://www.instagram.com/" class="footer__social__link" title="Instagram" target="_blank">
-                    <span class="icon icon-instagram ">
-                        <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="-576 768 22 22" style="enable-background:new -576 768 22 22;"
-                            xml:space="preserve">
-                            <path d="M-559.1,771.8c-0.7,0-1.3,0.6-1.3,1.3c0,0.7,0.6,1.3,1.3,1.3c0.7,0,1.3-0.6,1.3-1.3
-		C-557.8,772.4-558.4,771.8-559.1,771.8L-559.1,771.8z M-565,782.7c-2,0-3.7-1.6-3.7-3.7c0-2,1.6-3.7,3.7-3.7c2,0,3.7,1.6,3.7,3.7
-		C-561.3,781-563,782.7-565,782.7L-565,782.7z M-565,773.3c-3.1,0-5.6,2.5-5.6,5.6c0,3.1,2.5,5.6,5.6,5.6s5.6-2.5,5.6-5.6
-		C-559.4,775.9-561.9,773.3-565,773.3L-565,773.3z M-556,783.4c0,1.1-0.2,1.7-0.4,2c-0.2,0.5-0.4,0.9-0.8,1.3
-		c-0.4,0.4-0.8,0.6-1.3,0.8c-0.4,0.2-1,0.3-2,0.4c-1.2,0.1-1.5,0.1-4.4,0.1s-3.3,0-4.4-0.1c-1.1,0-1.7-0.2-2-0.4
-		c-0.5-0.2-0.9-0.4-1.3-0.8c-0.4-0.4-0.6-0.8-0.8-1.3c-0.2-0.4-0.3-1-0.4-2c-0.1-1.2-0.1-1.5-0.1-4.4s0-3.3,0.1-4.4
-		c0-1.1,0.2-1.7,0.4-2c0.2-0.5,0.4-0.9,0.8-1.3c0.4-0.4,0.8-0.6,1.3-0.8c0.4-0.2,1-0.3,2-0.4c1.2-0.1,1.5-0.1,4.4-0.1s3.3,0,4.4,0.1
-		c1.1,0,1.7,0.2,2,0.4c0.5,0.2,0.9,0.4,1.3,0.8c0.4,0.4,0.6,0.7,0.8,1.3c0.2,0.4,0.3,1,0.4,2c0.1,1.2,0.1,1.5,0.1,4.4
-		C-556,781.9-556,782.3-556,783.4L-556,783.4z M-554.6,771.8c-0.3-0.7-0.7-1.3-1.3-1.9c-0.6-0.6-1.2-1-1.9-1.3
-		c-0.7-0.3-1.5-0.5-2.7-0.5c-1.2-0.1-1.5-0.1-4.5-0.1s-3.4,0-4.5,0.1c-1.2,0.1-2,0.2-2.7,0.5c-0.7,0.3-1.3,0.7-1.9,1.3
-		c-0.6,0.6-1,1.2-1.3,1.9c-0.3,0.7-0.5,1.5-0.5,2.7c-0.1,1.2-0.1,1.5-0.1,4.5s0,3.4,0.1,4.5c0.1,1.2,0.2,2,0.5,2.7
-		c0.3,0.7,0.7,1.3,1.3,1.9c0.6,0.6,1.2,1,1.9,1.3c0.7,0.3,1.5,0.5,2.7,0.5c1.2,0.1,1.5,0.1,4.5,0.1s3.4,0,4.5-0.1
-		c1.2-0.1,2-0.2,2.7-0.5c0.7-0.3,1.3-0.7,1.9-1.3c0.6-0.6,1-1.2,1.3-1.9c0.3-0.7,0.5-1.5,0.5-2.7c0.1-1.2,0.1-1.5,0.1-4.5
-		s0-3.4-0.1-4.5C-554.1,773.3-554.3,772.5-554.6,771.8L-554.6,771.8z"></path>
-                        </svg>
-                    </span>
-                </a>
+            <div class="small-12 medium-4 footer-social">
+                <ul class="menu">
+                    <li>
+                        <a href="mailto:contato@novorumoatibaia.com.br" class="footer-social-link" title="Email">
+                            <span class="icon icon-email">
+                                <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 11">
+                                    <path fill-rule="nonzero" d="M.476 1.675v-.342C.476.873.85.5 1.31.5h11.666c.46 0 .834.373.834.833v.342L7.143 5.842.476 1.675zm6.888 5.012a.417.417 0 0 1-.442 0L.476 2.658v7.009c0 .46.373.833.834.833h11.666c.46 0 .834-.373.834-.833V2.658L7.364 6.687z"></path>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer-social-link" title="Facebook" target="_blank">
+                            <span class="icon icon-facebook">
+                                <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;"
+                                    xml:space="preserve">
+                                    <path class="st0" d="M18.9,0H1.1C0.5,0,0,0.5,0,1.1v17.8C0,19.5,0.5,20,1.1,20h9.6v-7.7H8.1v-3h2.6V7c0-2.6,1.6-4,3.9-4
+                        c1.1,0,2.1,0.1,2.3,0.1v2.7h-1.6c-1.3,0-1.5,0.6-1.5,1.5v1.9h3l-0.4,3h-2.6V20h5.1c0.6,0,1.1-0.5,1.1-1.1V1.1C20,0.5,19.5,0,18.9,0"></path>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/" class="footer-social-link" title="Instagram" target="_blank">
+                            <span class="icon icon-instagram">
+                                <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="-576 768 22 22" style="enable-background:new -576 768 22 22;"
+                                    xml:space="preserve">
+                                    <path d="M-559.1,771.8c-0.7,0-1.3,0.6-1.3,1.3c0,0.7,0.6,1.3,1.3,1.3c0.7,0,1.3-0.6,1.3-1.3
+                    C-557.8,772.4-558.4,771.8-559.1,771.8L-559.1,771.8z M-565,782.7c-2,0-3.7-1.6-3.7-3.7c0-2,1.6-3.7,3.7-3.7c2,0,3.7,1.6,3.7,3.7
+                    C-561.3,781-563,782.7-565,782.7L-565,782.7z M-565,773.3c-3.1,0-5.6,2.5-5.6,5.6c0,3.1,2.5,5.6,5.6,5.6s5.6-2.5,5.6-5.6
+                    C-559.4,775.9-561.9,773.3-565,773.3L-565,773.3z M-556,783.4c0,1.1-0.2,1.7-0.4,2c-0.2,0.5-0.4,0.9-0.8,1.3
+                    c-0.4,0.4-0.8,0.6-1.3,0.8c-0.4,0.2-1,0.3-2,0.4c-1.2,0.1-1.5,0.1-4.4,0.1s-3.3,0-4.4-0.1c-1.1,0-1.7-0.2-2-0.4
+                    c-0.5-0.2-0.9-0.4-1.3-0.8c-0.4-0.4-0.6-0.8-0.8-1.3c-0.2-0.4-0.3-1-0.4-2c-0.1-1.2-0.1-1.5-0.1-4.4s0-3.3,0.1-4.4
+                    c0-1.1,0.2-1.7,0.4-2c0.2-0.5,0.4-0.9,0.8-1.3c0.4-0.4,0.8-0.6,1.3-0.8c0.4-0.2,1-0.3,2-0.4c1.2-0.1,1.5-0.1,4.4-0.1s3.3,0,4.4,0.1
+                    c1.1,0,1.7,0.2,2,0.4c0.5,0.2,0.9,0.4,1.3,0.8c0.4,0.4,0.6,0.7,0.8,1.3c0.2,0.4,0.3,1,0.4,2c0.1,1.2,0.1,1.5,0.1,4.4
+                    C-556,781.9-556,782.3-556,783.4L-556,783.4z M-554.6,771.8c-0.3-0.7-0.7-1.3-1.3-1.9c-0.6-0.6-1.2-1-1.9-1.3
+                    c-0.7-0.3-1.5-0.5-2.7-0.5c-1.2-0.1-1.5-0.1-4.5-0.1s-3.4,0-4.5,0.1c-1.2,0.1-2,0.2-2.7,0.5c-0.7,0.3-1.3,0.7-1.9,1.3
+                    c-0.6,0.6-1,1.2-1.3,1.9c-0.3,0.7-0.5,1.5-0.5,2.7c-0.1,1.2-0.1,1.5-0.1,4.5s0,3.4,0.1,4.5c0.1,1.2,0.2,2,0.5,2.7
+                    c0.3,0.7,0.7,1.3,1.3,1.9c0.6,0.6,1.2,1,1.9,1.3c0.7,0.3,1.5,0.5,2.7,0.5c1.2,0.1,1.5,0.1,4.5,0.1s3.4,0,4.5-0.1
+                    c1.2-0.1,2-0.2,2.7-0.5c0.7-0.3,1.3-0.7,1.9-1.3c0.6-0.6,1-1.2,1.3-1.9c0.3-0.7,0.5-1.5,0.5-2.7c0.1-1.2,0.1-1.5,0.1-4.5
+                    s0-3.4-0.1-4.5C-554.1,773.3-554.3,772.5-554.6,771.8L-554.6,771.8z"></path>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
             </div>
             <div class="small-12 medium-8 show-for-small-only">
                 <p>© Associação Novo Rumo</p>
@@ -335,7 +343,7 @@
         </div>
     </div>
 
-    <div class="reveal large" id="open-text" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+    <div class="reveal large" id="open-text" data-reveal data-close-on-click="true">
         <div class="grid-x">
             <div class="small-12 medium-3 cell">
                 <h4>TV Cultura</h4>
