--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="utf-8" />
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="/css/flickity.min.css">
     <link rel="stylesheet" href="/css/app.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet" async>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" async />
 </head>
 
 <body>
@@ -74,7 +73,7 @@
                 <div class="grid-x">
                     <div class="small-12">
                         <div class="main-carousel" role="region">
-                            <a data-toggle="sobre-nos-modal" class="main-carousel-cell">
+                            <a data-toggle="modal-1" class="main-carousel-cell">
                                 <div class="column small-12">
                                     <p>
                                         <img src="http://via.placeholder.com/370x400">
@@ -84,41 +83,67 @@
                                     <p>Título</p>
                                 </div>
                             </a>
-                            <div class="reveal large" id="sobre-nos-modal" data-reveal data-close-on-click="true">
+                            <div class="reveal large" id="modal-1" data-reveal data-close-on-click="true">
                                 <div class="grid-x">
                                     <div class="small-12 medium-3 cell">
                                         <h4>TV Cultura</h4>
                                     </div>
                                     <div class="small-12 medium-9 cell">
-                                        <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos
-                                            fundada em xxxx, direcionado a jovens e adultos com deficiência intelectual,
-                                            que atende de segunta a sexta-feira das xx ás xx na região de Atibia. </p>
-                                        <p>
-                                            Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial através de atividades que são dadas
-                                            no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos
-                                            dificuldades e que todos nós podemos superá-las, com ajuda de amigos ou de algum
-                                            profissional que esta acompanhando as atividades do dia.
-                                        </p>
-
-                                        <p>
-                                            O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que recebos, tendo como objetivo a inserção
-                                            desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para
-                                            chegarmos neste objetivo com sucesso, tarbalhamos com nossos alunos todos os
-                                            dias em atividades específicas.
-                                        </p>
+                                        <p> Lorem ipsum dolores non fat siamec.</p>
                                     </div>
                                 </div>
                                 <button class="close-button" data-close aria-label="Close reveal" type="button">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
-
-                            <a data-toggle="open-text" class="main-carousel-cell">
+                            <a data-toggle="modal-2" class="main-carousel-cell">
                                 <img src="http://via.placeholder.com/370x400">
                             </a>
-                            <a data-toggle="open-text" class="main-carousel-cell">
+                            <div class="reveal large" id="modal-2" data-reveal data-close-on-click="true">
+                                <div class="grid-x">
+                                    <div class="small-12 medium-3 cell">
+                                        <h4>TV Cultura</h4>
+                                    </div>
+                                    <div class="small-12 medium-9 cell">
+                                        <p> Lorem ipsum dolores non fat siamec.</p>
+                                    </div>
+                                </div>
+                                <button class="close-button" data-close aria-label="Close reveal" type="button">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <a data-toggle="modal-3" class="main-carousel-cell">
                                 <img src="http://via.placeholder.com/370x400">
                             </a>
+                            <div class="reveal large" id="modal-3" data-reveal data-close-on-click="true">
+                                <div class="grid-x">
+                                    <div class="small-12 medium-3 cell">
+                                        <h4>TV Cultura</h4>
+                                    </div>
+                                    <div class="small-12 medium-9 cell">
+                                        <p> Lorem ipsum dolores non fat siamec.</p>
+                                    </div>
+                                </div>
+                                <button class="close-button" data-close aria-label="Close reveal" type="button">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <a data-toggle="modal-4" class="main-carousel-cell">
+                                <img src="http://via.placeholder.com/370x400">
+                            </a>
+                            <div class="reveal large" id="modal-4" data-reveal data-close-on-click="true">
+                                <div class="grid-x">
+                                    <div class="small-12 medium-3 cell">
+                                        <h4>TV Cultura</h4>
+                                    </div>
+                                    <div class="small-12 medium-9 cell">
+                                        <p> Lorem ipsum dolores non fat siamec.</p>
+                                    </div>
+                                </div>
+                                <button class="close-button" data-close aria-label="Close reveal" type="button">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -141,7 +166,8 @@
                 <div class="grid-x">
                     <div class="small-8 medium-4 large-8 cell hide-for-small-only"></div>
                     <div class="small-12 medium-12 large-4 cell text-center">
-                        <p>Sua doação é de extrema importância para nós, pois com ela podemos manter nossas atividades, realizar
+                        <p>Sua doação é de extrema importância para nós, pois com ela podemos manter nossas atividades,
+                            realizar
                             manutenção e para o desenvolvimento de novos projetos para nossa Associação.
                         </p>
                     </div>
@@ -159,12 +185,16 @@
                 </div>
                 <div class="small-12 medium-6 cell">
                     <h6 class="title text-center">Localização</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet, ligula a convallis ullamcorper,
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet, ligula a convallis
+                        ullamcorper,
                         lorem lectus consectetur velit, non faucibus.</p>
                     <h6 class="title text-center">Descrição</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, vehicula a nunc quis, porta
-                        luctus nisi. Duis id ligula a purus feugiat volutpat eget ut leo. Ut sit amet bibendum eros. Proin
-                        convallis eleifend velit. Donec facilisis quis purus ut mollis. Phasellus eget nibh in ex mattis
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, vehicula a nunc
+                        quis, porta
+                        luctus nisi. Duis id ligula a purus feugiat volutpat eget ut leo. Ut sit amet bibendum eros.
+                        Proin
+                        convallis eleifend velit. Donec facilisis quis purus ut mollis. Phasellus eget nibh in ex
+                        mattis
                         mollis.
                     </p>
                 </div>
@@ -327,8 +357,8 @@
                     <li>
                         <a href="#" class="footer-social-link" title="Facebook" target="_blank">
                             <span class="icon icon-facebook">
-                                <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;"
-                                    xml:space="preserve">
+                                <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                                    viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
                                     <path class="st0" d="M18.9,0H1.1C0.5,0,0,0.5,0,1.1v17.8C0,19.5,0.5,20,1.1,20h9.6v-7.7H8.1v-3h2.6V7c0-2.6,1.6-4,3.9-4
                         c1.1,0,2.1,0.1,2.3,0.1v2.7h-1.6c-1.3,0-1.5,0.6-1.5,1.5v1.9h3l-0.4,3h-2.6V20h5.1c0.6,0,1.1-0.5,1.1-1.1V1.1C20,0.5,19.5,0,18.9,0"></path>
                                 </svg>
@@ -338,8 +368,8 @@
                     <li>
                         <a href="https://www.instagram.com/" class="footer-social-link" title="Instagram" target="_blank">
                             <span class="icon icon-instagram">
-                                <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="-576 768 22 22" style="enable-background:new -576 768 22 22;"
-                                    xml:space="preserve">
+                                <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="-576 768 22 22"
+                                    style="enable-background:new -576 768 22 22;" xml:space="preserve">
                                     <path d="M-559.1,771.8c-0.7,0-1.3,0.6-1.3,1.3c0,0.7,0.6,1.3,1.3,1.3c0.7,0,1.3-0.6,1.3-1.3
                     C-557.8,772.4-558.4,771.8-559.1,771.8L-559.1,771.8z M-565,782.7c-2,0-3.7-1.6-3.7-3.7c0-2,1.6-3.7,3.7-3.7c2,0,3.7,1.6,3.7,3.7
                     C-561.3,781-563,782.7-565,782.7L-565,782.7z M-565,773.3c-3.1,0-5.6,2.5-5.6,5.6c0,3.1,2.5,5.6,5.6,5.6s5.6-2.5,5.6-5.6
@@ -372,19 +402,26 @@
                 <h4>TV Cultura</h4>
             </div>
             <div class="small-12 medium-9 cell">
-                <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos fundada em xxxx,
-                    direcionado a jovens e adultos com deficiência intelectual, que atende de segunta a sexta-feira das xx
+                <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos fundada em
+                    xxxx,
+                    direcionado a jovens e adultos com deficiência intelectual, que atende de segunta a sexta-feira das
+                    xx
                     ás xx na região de Atibia. </p>
                 <p>
-                    Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial através de atividades que são dadas
-                    no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos dificuldades e que todos
-                    nós podemos superá-las, com ajuda de amigos ou de algum profissional que esta acompanhando as atividades
+                    Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial através de
+                    atividades que são dadas
+                    no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos dificuldades e que
+                    todos
+                    nós podemos superá-las, com ajuda de amigos ou de algum profissional que esta acompanhando as
+                    atividades
                     do dia.
                 </p>
 
                 <p>
-                    O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que recebos, tendo como objetivo a inserção
-                    desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para chegarmos neste objetivo
+                    O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que recebos, tendo
+                    como objetivo a inserção
+                    desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para chegarmos neste
+                    objetivo
                     com sucesso, tarbalhamos com nossos alunos todos os dias em atividades específicas.
                 </p>
             </div>
@@ -399,10 +436,9 @@
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script type="text/javascript" src="./js/skrollr.min.js" async></script>
     <script type="text/javascript" src="./js/skrollr.stylesheets.min.js" async></script>
-
-    <div id="fb-root"></div>
     <script>
         $(document).foundation();
+        navegacao().iniciar();
 
         $(window).on('load', function () {
             if (Foundation.MediaQuery.atLeast('medium')) {
@@ -447,29 +483,26 @@
             indicadorAberturaMenu = !indicadorAberturaMenu;
         });
 
-        var $mainCarousel = $('.main-carousel').flickity({
+        var configuracaoFlickity = {
             groupCells: true,
-            pageDots: false,
-            arrowShape: 'M92.5,42.5H25.6L37.8,30.3A7.5,7.5,0,1,0,27.2,19.7l-25,25a7.5,7.5,0,0,0,0,10.6l25,25a7.5,7.5,0,0,0,10.6,0,7.5,7.5,0,0,0,0-10.6L25.6,57.5H92.5a7.5,7.5,0,0,0,0-15Z'
-        });
+            pageDots: false
+        };
+
+        var $mainCarousel = $('.main-carousel').flickity(configuracaoFlickity);
         var flickity = $mainCarousel.data('flickity');
 
-        var $picturesCarousel = $('.pictures-carousel').flickity({
-            groupCells: true,
-            pageDots: false,
-            arrowShape: 'M92.5,42.5H25.6L37.8,30.3A7.5,7.5,0,1,0,27.2,19.7l-25,25a7.5,7.5,0,0,0,0,10.6l25,25a7.5,7.5,0,0,0,10.6,0,7.5,7.5,0,0,0,0-10.6L25.6,57.5H92.5a7.5,7.5,0,0,0,0-15Z'
-        });
+        var $picturesCarousel = $('.pictures-carousel').flickity(configuracaoFlickity);
         var picturesFlickity = $picturesCarousel.data('flickity');
 
         $mainCarousel.on('click', 'a', function (event) {
             if (event.currentTarget != flickity.selectedElement) {
-                $('#'+ event.currentTarget.dataset.toggle).foundation('toggle');
+                $('#' + event.currentTarget.dataset.toggle).foundation('toggle');
             }
         });
 
         $picturesCarousel.on('click', 'a', function (event) {
             if (event.currentTarget != picturesFlickity.selectedElement) {
-                $('#'+ event.currentTarget.dataset.toggle).foundation('toggle');
+                $('#' + event.currentTarget.dataset.toggle).foundation('toggle');
             }
         });
 
@@ -484,9 +517,11 @@
             skrollr.init().destroy();
         }
 
-        $(document).ready(function () {
-            $(function () {
-                $('a[href*=\\#]:not([href=\\#])').click(function () {
+        function navegacao() {
+            function iniciar() {
+                $('a[href*=\\#]:not([href=\\#])').on('click', navegarParaIndice);
+
+                function navegarParaIndice() {
                     if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') &&
                         location.hostname == this.hostname) {
 
@@ -499,10 +534,12 @@
                             return false;
                         }
                     }
-                });
-            });
-
-        });
+                }
+            }
+            return {
+                iniciar: iniciar
+            };
+        }
     </script>
 </body>
 
